# 1602-lcd

./: .clang-format  CMakeLists.txt  build.sh  dockerfile  linker.ld  openocd.cfg  readme.md  stm32f446.ld  toolchain.cmake
inc/: gpio.h  hal.h  lcd.h  led.h  main.h  rcc.h  system.h  systick.h  trafficlight.h  uart.h
openocd/: debug.cfg  openocd.cfg
src/: gpio.c  lcd.c  led.c  main.c  startup.c  syscalls.c  system.c  systick.c  trafficlight.c  uart.c
